# adhoctempmon

./: .gitignore  README.md
dst/: build.sh  flake.nix  genconf  init.sh
srv/: default.nix  flake.nix  srv.cabal
srv/app/: Main.hs  Monitor.hs  Pages.hs  Util.hs
srv/static/: main.css
