cabal-version:      2.4
name:               srv
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             lincoln auster [they/them]
maintainer:         lincolnauster@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable srv
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Monitor Util Pages

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.14.3.0, unix >= 2.7.2, text >= 1.2.4,
                      time >= 1.0, directory >= 1.3.6, scotty >= 0.12, stm >= 2.5.0,
                      blaze-html >= 0.7.0, xhtml >= 3000.2.2.1
    ghc-options: -Wall -Wextra -O2
    hs-source-dirs:   app
    default-language: Haskell2010
